--- a/projects/client/src/app/starwars-lookup/starwars-lookup-container.component.html
+++ b/projects/client/src/app/starwars-lookup/starwars-lookup-container.component.html
@@ -1,3 +1,6 @@
-<div *ngFor="let person of (people$ | async)?.results; index as i">
-  <app-person [person]="person"></app-person>
+<div class="person-container">
+  <app-person
+    *ngFor="let person of (people$ | async)?.results; index as i"
+    [person]="person"
+  ></app-person>
 </div>
